# brain-cv-tuner

./: .gitignore  CMakeLists.txt  README.md  brain-cv-tuner-pico-2.uf2  brain-cv-tuner-pico.uf2  build-firmware.sh  main.cpp
